--- a/updated/disc20repartition_feedback.tex
+++ b/updated/disc20repartition_feedback.tex
@@ -470,11 +470,11 @@ component set reaches connectivity $\alpha$, while prior approaches do so once t
 	\begin{algorithmic}
 		\STATE $C_{merged}\gets\bigcup_{C\in X} C$
 		\IF{$\exists C\in X$ s.t. $res(C)>= |C_{merged}|-|C|$}
-		\STATE move all nodes to the server of $C$, freeing reservations and capacity
+		\STATE move all nodes from $C_{merged}$ to the server of $C$, freeing reservations and capacity
 		\STATE $res(C_{merged})\gets res(C)-(|C_{merged}|-|C|)$
 		\ELSE
 		\STATE $target\gets$ $server$ s.t. $cap(server)\geq \min\{k, (1+\epsilon)\cdot|C_{merged}|\}$
-		\STATE move all nodes from $X$ to $target$, freeing reservations and capacity
+		\STATE move all nodes from $C_{merged}$ to $target$, freeing reservations and capacity
 		\STATE $cap(target)\gets cap(target)-\min\{k, (1+\epsilon)\cdot|C_{merged}|\}$
 		\STATE $res(C_{merged})\gets\min\{k-|C_{merged}|, \epsilon\cdot|C_{merged}|\}$
 		\ENDIF
